# service/user.go
@@ -1,8 +1,10 @@
 package service
 
 import (
+	"gin_gorm_oj/helper"
 	"gin_gorm_oj/models"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"net/http"
 )
 
@@ -35,4 +37,83 @@ func GetUserDetail(c *gin.Context) {
 		"data": data,
 	})
 
+}
+
+// Login
+// @Tags 公共方法
+// @Summary 用户登录
+// @Param username formData string false "username"
+// @Param password formData string false "password"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /login [post]
+func Login(c *gin.Context) {
+	username := c.PostForm("username")
+	password := c.PostForm("password")
+	if username == "" || password == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "必填信息为空",
+		})
+		return
+	}
+	password = helper.GetMd5(password)
+	println(username, password)
+	data := new(models.UserBasic)
+	err := models.DB.Where("name = ? AND password = ?", username, password).First(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "用户名或密码错误",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "get UserBasic error:" + err.Error(),
+		})
+		return
+
+	}
+	token, err := helper.GenerateToken(data.Identity, data.Name)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "GenerateToken error:" + err.Error(),
+		})
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": -1,
+		"data": map[string]interface{}{
+			"token": token,
+		},
+	})
+}
+
+// Login
+// @Tags 公共方法
+// @Summary 发送验证码
+// @Param email formData string false "email"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /send-code [post]
+func SendCode(c *gin.Context) {
+	email := c.PostForm("email")
+	if email == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "参数不正确",
+		})
+	}
+	code := "123456"
+	err := helper.SendCode(email, code)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Send Code Error:" + err.Error(),
+		})
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": -1,
+		"msg":  "发送信息成功",
+	})
 }
